Some more aesthetics tweaks. Added explanation and link to documentation on New Search page.

--- a/styles/default.css
+++ b/styles/default.css
@@ -16,6 +16,9 @@ span.iri { font-weight: bold }
 span.value { font-weight: bold }
 
 #new_srch { margin-top: 40px; margin-bottom: 40px; width: 100%; text-align: center;}
+
+div.expln { margin: 0 100px 5px 100px;}
+
 #res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 800px;}
 #res h3 { margin-top: 0; margin-left: 5px;}
 #new_srch label.left_txt { margin-right: 10px;}
