--- a/styles/default.css
+++ b/styles/default.css
@@ -25,7 +25,7 @@ div.expln { margin: 0 100px 5px 100px;}
 table.result { clear:left; width: 100%; margin: 3px;}
 table.result td { max-width: 350px; overflow: hidden;}
 
-#opl_logo { border: 0; width: 120px; float: left;}
+#opl_logo { border: 0; width: 120px; float: left; margin-left: 6px;}
 #HD h1 { float:left; margin: 0 0 0 80px;vertical-align: top; color: #335;}
 
 span.descr { font-size: 9pt; color: 557; margin-top: 0;}
@@ -51,28 +51,45 @@ span.descr { font-size: 9pt; color: 557; margin-top: 0;}
 
 #FT img { border: 0;}
 
-div#opts_ctr {
-  margin: auto;
+input.num { text-align: right;}
+
+.dlg { background-color: #ddd;}
+.dlg .title { margin: 0; 
+              text-align: center; 
+              background-image: url(/images/dlg_title_bkg.png); 
+              border-bottom: 1px inset}
+.dlg form { margin: 0; width: 100%;}
+.dlg .btn_bar { margin: 0; 
+                padding-top: 2ex; 
+                width: 100%; height: 6ex; 
+                border-top: 1px solid #333; background-color: #ddd; text-align: right; }
+.dlg .btn_bar button { margin-right: 4px; }
+.dlg .btn_bar input[type="submit"] { margin-right: 6px; }
+.dlg .title h2 { font-size: 10pt; margin: 0; color: #333;}
+.dlg .fm_sect { margin: 0 10px 15px 10px; border-top: 1px solid #333}
+.dlg .fm_sect:first-child { border: 0; margin-top: 20px;}
+.dlg .fm_sect h3 { font-size: 9pt; margin: 0}
+.dlg label.left_txt { float: left; clear: left; width: 120px;}
+.dlg .ctl_expln { margin-left: 120px; font-size: 8pt; font-style: oblique}
+ 
+#opts_ctr {
+  width: 100%;
   text-align: center;
   background-color: white; 
 }
 
-div#opts {
-  border: 1pt solid #333;
+#opts {
+  margin: auto;
+  border: 1pt solid #555;
   text-align: left;
-  font-size: 10pt;
+  font-size: 9pt;
   width: 650px;
 }
 
-div#opts h2 { margin: 0 5px 5px 5px;}
-div#opts h3 { margin-top: 5px}
-div#opts form {
-  margin: 0 5px 5px 15px;
-}
 
-div#opts label.left_txt { float: left; clear: left; width: 120px;}
+#opts input[type="checkbox"] { margin-left: 120px; }
 
-div.opt_sect { border-top: 1px solid #335;}
+#res .btn_bar { text-align: right; border-top: 1px solid #333; margin-top: 15px; padding-top: 8px;}
 
 div.dbg { 
   display: none; }
@@ -80,7 +97,13 @@ div.dbg {
 /*div.dbg { padding: 10px; background-color: yellow; border: 1px solid black}*/
 
 div#pager { margin-top: 10px; float: right;}
-div#pager a { background-color: #ddd; padding: 2px; border: 1px solid #335; padding: 3px 5px 3px 5px; width: auto; text-decoration: none; text-align: center;}
+div#pager a { background-color: #ddd; 
+              padding: 2px; 
+              border: 1px solid #335; 
+              padding: 3px 5px 3px 5px; 
+              width: auto; 
+              text-decoration: none; 
+              text-align: center;}
 
 h3#view_info {
   margin-top: 5px;
@@ -105,18 +128,36 @@ div.error_msg div.diag h3 {}
 
 div.facet_ctr {
   float: left;
+  margin-left: 4px;
 }
 
-h4.facet_hd { margin: 0; }
+div.facet_ctr:first-child { margin-left: 0;}
+
+.facet_hd { 
+  margin: 0; 
+  text-align: center;
+  border-top: 1px solid #333;
+  border-left: 1px solid #333;
+  border-right: 1px solid #666;
+  background-color: #aaa;
+  background-image: url(/images/dlg_title_bkg.png);}
+
 div.facet { 
-    	float:left; 
-	height: 20em;  
-	width: 394px; 
-        overflow-y: auto; 
-        overflow-x: hidden; 
-	border: 1px solid #334;
-	margin: 2px;
-	}
+  float:left; 
+  height: 20em;  
+  width: 394px; 
+  overflow-y: auto; 
+  overflow-x: hidden; 
+  background-color: #fff;
+  border: 1px inset;
+}
 
 div#sparql_link { margin-top: 10px; float: right;}
-div#sparql_link a { background-color: #ddd; padding: 2px; border: 1px solid #335; padding: 3px 5px 3px 5px; width: auto; text-decoration: none; text-align: center;}
+div#sparql_link a { 
+  background-color: #ddd; 
+  padding: 2px; 
+  border: 1px solid #335; 
+  padding: 3px 5px 3px 5px; 
+  width: auto; 
+  text-decoration: none; 
+  text-align: center;}
