--- a/styles/default.css
+++ b/styles/default.css
@@ -15,6 +15,8 @@ a.describe {margin-right: 6px}
   border-top: 1px solid #335; 
   text-align: center;}
 
+img.rnk { float: left; clear:left; margin-top: 1px;}
+
 span.iri { font-weight: bold }
 span.value { font-weight: bold }
 
