Centered the main page explanation text.

--- a/styles/default.css
+++ b/styles/default.css
@@ -25,7 +25,7 @@ span.value { font-weight: bold }
 
 div.expln { margin: 0 100px 5px 100px;}
 div.doc_ctr { margin: 10px; }
-div.main_expl { text-align: center}
+div.main_expln { text-align: center; width: 100%;}
 
 #res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 800px;}
 #res h3 { margin-top: 0; margin-left: 5px;}
