--- a/styles/default.css
+++ b/styles/default.css
@@ -171,7 +171,7 @@ div.doc_ctr { margin: 10px; }
 div.main_actions { float: left; clear: left; width: 100%; text-align: left;}
 div.main_expln { float: left; clear: left; text-align: center; width: 100%;}
 
-#res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 800px;}
+#res { float: left; clear: left; margin: 5px 0px 0px 0px; width: 70%}
 #res h3 { margin-top: 0; margin-left: 5px;}
 
 #new_search_txt {}
@@ -328,7 +328,7 @@ span.descr { font-size: 9pt; color: #557; margin-top: 0;}
 #result_nfo { float: left; clear: both; width: 100%; margin-top: 8px; margin-left: 5px; color: #446;}
 
 #fct_nav { 
-  float: left; 
+  float: right; 
   margin-left: 10px;
   margin-top: 4px; 
   padding-left: 3px; 
@@ -429,7 +429,6 @@ h3#view_info {
 
 div#top_ctr { 
   font-size: 10pt;
-  width: 995px;
   background-color: #ccc;
   margin-top: 0px; padding-top: 4px;
   padding-left: 5px; padding-right: -4px;
