--- a/styles/default.css
+++ b/styles/default.css
@@ -523,3 +523,5 @@ div#nav {
 }
 
 a#sp_link { font-size: 11pt; font-weight:normal; }
+
+#qrcode { position:fixed; top:100px; right: 30px; z-index: 0; } 
