--- a/www/style.css
+++ b/www/style.css
@@ -28,6 +28,9 @@ body {
     font-size: 80%;
     margin: 0;
     padding: 1.2em 2em;}
+    
+a, a:visited {color: #242;}
+    
 #rdficon { float: right; position: relative; top: -28px; vertical-align: middle; padding: 3px; border: 1px solid #fff;}
 #header { border-bottom: 2px solid #696; margin: 0 0 1.2em; padding: 0 0 0.3em; }
 #footer { border-top: 2px solid #696; color: #666; margin: 1.2em 0 0; padding: 0.3em 0 0; }
