* Added Twitter, Facebook and Google+ to footer

--- a/styles/default.css
+++ b/styles/default.css
@@ -549,4 +549,6 @@ a#sp_link { font-size: 11pt; font-weight:normal; }
 
 #qrcode { position:fixed; top:100px; right: 30px; z-index: 0; } 
 
-#FT_share { float: right; clear: right; vertical-align: top; margin-right: 4px; }
+#FT_share { float: center; clear: both; text-align: center; }
+
+.addthis_toolbox { width: 400px; margin: 0 auto; }
