--- a/styles/default.css
+++ b/styles/default.css
@@ -593,7 +593,18 @@ div#nav {
 a#sp_link { font-size: 9pt; font-weight:normal; }
 a.desc_permalink { font-size: 9pt; font-weight: normal }
 
-#qrcode { position:fixed; top:100px; right: 30px; z-index: 0; } 
+#qrcode_img { 
+  border: none;
+  margin-left: auto; 
+  margin-right: auto; 
+  display: block; 
+  }
+
+#qrcode_thumb {
+  position:fixed; top:80px; right: 10px; z-index: 0;
+  margin-top: 10px; 
+  margin-right: 10px; 
+  }
 
 #FT_share { margin: auto; width: 400px}
 
