Added link to raw results in PivotViewer to fct result page.

--- a/styles/default.css
+++ b/styles/default.css
@@ -541,6 +541,7 @@ div.facet {
 }
 
 .plink_a {margin-left: 1em}
+.sparqlhpv_a {margin-left: 1em}
 
 div#sparql_link { margin-top: 10px; float: right;}
 div#sparql_link a { 
