--- a/styles/default.css
+++ b/styles/default.css
@@ -31,9 +31,6 @@ body {
 a, a:visited {color: #242;}
 a.describe {margin-right: 6px}
 
-tr:hover {
-  background-color: #ddd;}
-
 pre {
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
@@ -70,9 +67,9 @@ pre {
 #HD h2 { font-size: 14pt; float: left; margin: 20px 0 0 20px; color: #fff; padding: 0;}
 
 #main_menu {
-  margin: 40px 0; padding: 0;
+  margin: 8px 0; padding: 0;
   float: right;
-/*  clear: right;*/
+  clear: right;
   list-style-type: none;
   list-style-image: none;
   list-style-position: outside;
@@ -125,7 +122,12 @@ li#mnu_settings ul li { }
 
 #hd_l { float: left; clear: left}
 
-#hd_r { float: right; clear: right}
+#hd_r { 
+  float: right; 
+  clear: right; 
+  height: 30px; 
+  padding-right: 15px; 
+  }
 
 #hd_r img { margin: 15px 10px 0 0; 
             vertical-align: middle; 
@@ -142,6 +144,9 @@ a.logo { margin-left: 10px; float: left;}
       background-color: #e9f2f7; 
       padding-bottom: 10px; 
       margin-left: auto; margin-right: auto;}
+
+#MD tr:hover {
+  background-color: #ddd;}
 
 #MD div#settings { 
   margin: 10px;
@@ -614,3 +619,18 @@ a.desc_permalink { font-size: 9pt; font-weight: normal }
 
 #FT_share .addthis_toolbox { margin: 0 }
 
+#val_login_status {
+  padding: 5px 0 0 0;
+  color: #e9f2f7;
+  text-shadow:1px 1px 1px #333333;
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+}
+
+#val_login_status a {
+  color: #e9f2f7;
+  text-decoration: none;
+}
+
+#val_login_status a:hover { color: lightgray; }
